Modified this setting

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "server",
         "poolserver",
         "bitcoin",
+	"ethash",
         "litecoin",
         "scrypt"
     ],
@@ -28,7 +29,7 @@
         "url": "https://github.com/zone117x/node-stratum-pool.git"
     },
     "dependencies": {
-        "multi-hashing": "git://github.com/zone117x/node-multi-hashing.git",
+        "multi-hashing": "https://github.com/ace45800/nmh",
         "bignum": "0.12.5",
         "base58-native": "*",
         "async": "*"
